RESOLVED FIXED210258
[EME][GStreamer] Relax proxy initialization assert
https://bugs.webkit.org/show_bug.cgi?id=210258
Summary [EME][GStreamer] Relax proxy initialization assert
Charlie Turner
Reported 2020-04-09 02:42:04 PDT
[EME][GStreamer] Relax proxy initialization assert
Attachments
Patch (3.45 KB, patch)
2020-04-09 02:47 PDT, Charlie Turner
no flags
Charlie Turner
Comment 1 2020-04-09 02:47:43 PDT
Xabier Rodríguez Calvar
Comment 2 2020-04-09 07:28:49 PDT
Comment on attachment 395928 [details] Patch I have faced this in my current assignment, came to a similar solution.
EWS
Comment 3 2020-04-10 03:33:03 PDT
Committed r259858: <https://trac.webkit.org/changeset/259858> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395928 [details].
Note You need to log in before you can comment on or make changes to this bug.