[EME][GStreamer] Relax proxy initialization assert https://bugs.webkit.org/show_bug.cgi?id=210258

Reviewed by Xabier Rodriguez-Calvar.

update() may be called on a session before its parent MediaKeys object
has been associated with a media element. Supporting this is officially
optional, but enough sites (including the W3C EME tests) depend on this
optional behaviour that we should support it.

Covered by imported/w3c/web-platform-tests/encrypted-media.

* platform/encryptedmedia/CDMProxy.cpp:
(WebCore::CDMInstanceProxy::mergeKeysFrom): Since the background
proxy may not be installed yet, don't ASSERT() it exists.
* platform/encryptedmedia/CDMProxy.h:
(WebCore::KeyStore::hasKeys const):
(WebCore::CDMInstanceProxy::setProxy): Now, when the background
proxy is installed, check if any keys have been made available as
described above, and if so, set them.


Canonical link: https://commits.webkit.org/223214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259858 268f45cc-cd09-0410-ab3c-d52691b4dbfc